# stormwar

./: .gitignore  AUTHORS  BUGS  ChangeLog  Makefile.OSX  Makefile.am  Makefile.in  Makefile.w32  NEWS  README  TODO  aclocal.m4  config.h.in  config_osx.h.in  config_w32.h.in  configure  configure.ac  doxyconfig  stormwar.prj  stormwar.spec.in
data/: Makefile.am  Makefile.in  stormwar_data
data/default/: env  game  ground  mod_def
data/default/cursors/: def
data/default/fonts/: def  default12  default16  default8  opt_menubar  opt_shell
data/default/gui/: def  map  menubar  shell  sidepanel
data/default/gui/menus/: game  optionfps  optiongamma  optionres  options  optiontex
data/default/gui/pict/: menu_bg  menubar_bg  sidepanel_bg
data/default/i18n/: def  fr  pl  pt
data/default/meshes/: bridge  discthrower  generator  skybox  suncannon  temple  workshop
data/default/music/: def
data/default/sound/: def
data/default/tex/: def
docs/: dep_wish.odg  doc_modref.h  doc_modules.h
m4/: Makefile.in
src/: Makefile.am  Makefile.in  fake.h  kernel.c  kernel.h  main.c  main.h  test.c  test.h
src/core/: comp.h  constants.h  core.h  i18n.h  macros.h  ptrarray.h  reader.h  shell.h  string.h  types.h  var.h
src/core/impl/: comp.c  core.c  i18n.c  impl.h  ptrarray.c  reader.c  shell.c  shellfunction.c  shellfunction.h  string.c  var.c
src/game/: game.c  game.h
src/game/internal/: droprules.c  droprules.h  entity.c  entity.h  game.h  gamecamera.c  piece.c  piece.h  player.c  player.h  register.c  register.h
src/graphics/: camera.h  color.h  gl2dobject.h  gl3dobject.h  gliterator.h  glmesh.h  glrect.h  glsurface.h  gltextrender.h  graphics.h  input.h  light.h  particle.h  types.h
src/graphics/impl/: camera.c  color.c  cursor.c  cursor.h  gl2dobject.c  gl3dobject.c  gliterator.c  glmesh.c  glmeshpart.c  glmeshpart.h  glscreen.c  glscreen.h  glsurface.c  gltextrender.c  gltextures.c  gltextures.h  graphics.c  impl.h  input.c  keyboard.c  keyboard.h  light.c  opengl.c  opengl.h  particle.c  types.c
src/gui/: gui.c  gui.h  guidialog.c  guidialog.h  guitexture.c  guitexture.h  worldmap.c  worldmap.h
src/gui/internal/: gamedialogs.c  gamedialogs.h  guibutton.c  guibutton.h  guiinput.c  guiinput.h  guioutput.c  guioutput.h  guipopupmenu.c  guipopupmenu.h  guiscrollbar.c  guiscrollbar.h  guishell.c  guishell.h  guitheme.c  guitheme.h  guitooltip.c  guitooltip.h  guiwidget.c  guiwidget.h  menubar.c  menubar.h  sidepanel.c  sidepanel.h
src/sound/: sound.c  sound.h
src/system/: mem.c  mem.h
src/tools/: anim.c  anim.h  completion.c  completion.h  fonct.c  fonct.h  tools.c  tools.h  varvalidator.c  varvalidator.h
src/tools/internal/: texturizer.c  texturizer.h
src/world/: env.c  env.h  ground.c  ground.h  world.c  world.h
src/world/internal/: flocking.c  flocking.h  skybox.c  skybox.h  thunderbolt.c  thunderbolt.h
tools/: Core.java  Main.java  Plugin.java  StringSimilarity.java  UpdateI18N.java  Var.java  run.sh
